<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dzik.testapp01.AddEventActivity">

    <EditText
        android:id="@+id/editEventTitle"
        android:layout_width="322dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/edit_eventTitle"
        android:inputType="textPersonName"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editEventDesc"
        android:layout_width="337dp"
        android:layout_height="189dp"
        android:ems="10"
        android:hint="@string/edit_eventDesc"
        android:inputType="textPersonName"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editEventTitle" />

    <Button
        android:id="@+id/button_saveTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="uploadNewTask"
        android:text="@string/button_saveTask"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_setEventTime" />

    <TextView
        android:id="@+id/textView_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_saveTask" />

    <TextView
        android:id="@+id/textView_setEventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_eventSetDate"
        android:onClick="showDatePickerDialog"
        android:clickable="true"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editEventDesc" />

    <TextView
        android:id="@+id/textView_setEventTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_eventSetTime"
        android:onClick="showTimePickerDialog"
        android:clickable="true"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_setEventDate" />

</android.support.constraint.ConstraintLayout>
